k8s/home-k3s/traefik/laravel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: laravel
  annotations:
    # kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - wh-api.ianf.dev
      secretName: laravel-tls
  rules:
    - host: wh-api.ianf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public
                port:
                  number: 80
